// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getLastEditedProps 1`] = `
Object {
  "last_edited_by_id": "user_root_1",
  "last_edited_by_table": "notion_user",
  "last_edited_time": Any<Number>,
}
`;

exports[`updateLastEditedProps 1`] = `
Object {
  "id": "block_1",
  "last_edited_by_id": "user_root_1",
  "last_edited_by_table": "notion_user",
  "last_edited_time": Any<Number>,
}
`;

exports[`updateLastEditedProps 2`] = `
Object {
  "id": "block_2",
  "last_edited_by_id": "user_root_1",
  "last_edited_by_table": "notion_user",
  "last_edited_time": Any<Number>,
}
`;
